# bazel_rusty_v8_example

./: .gitignore  BUILD.bazel  Cargo.toml  README.md  WORKSPACE.bazel
