[package]
name = "bazel_rusty_v8_example"
version = "0.1.0"
authors = ["UebelAndre <github@uebelandre.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusty_v8 = "0.13.0"

[package.metadata.raze]
workspace_path = "//third_party/cargo"
genmode = "Remote"
render_package_aliases = false
default_gen_buildrs = true

[package.metadata.raze.crates.rusty_v8.'*']
gen_buildrs = false
data_attr = "[\"@bazel_rusty_v8_example//third_party/rusty_v8:rusty_v8_lib\"]"
additional_flags = [
    "-lstatic=rusty_v8",
    "-Ldependency=$(rootpath @bazel_rusty_v8_example//third_party/rusty_v8:rusty_v8_lib)",
]
